baml_language/crates/baml_tests/snapshots/baml_src/ns_fixtures/ns_namespaces_nested/bytecode.snap
---
source: crates/baml_tests/src/corpus.rs
---
function fixtures.namespaces_nested.CallOpenAI(cfg: <unresolved type #18725680750601>) -> <unresolved type #91009739535368> {
    load_const "response"
    load_const "gpt-4"
    init_instance user.fixtures.namespaces_nested.llm.openai.OpenAIResponse .text, .model
    return
}
