baml_language/crates/baml_tests/snapshots/baml_src/ns_fixtures/ns_namespaces_nested/main.fmt.snap
---
source: crates/baml_tests/src/corpus.rs
---
// Root namespace: references a type from a nested namespace
class AppConfig {
    api_key: string,
}

function CallOpenAI(cfg: AppConfig) -> root.fixtures.namespaces_nested.llm.openai.OpenAIResponse {
    root.fixtures.namespaces_nested.llm.openai.OpenAIResponse { text: "response", model: "gpt-4" }
}
